--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <div class="site-logo"><a href="index.html" class="text-uppercase">Undefined</a></div>
+          <div class="site-logo"><a href="index.html" class="text-uppercase">RaymiTech</a></div>
           <div>
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-xl-block">
@@ -91,7 +91,7 @@
             <div class="owl-carousel slide-one-item-alt-text">
               <div class="slide-text">
                 <h1>Bienvenidos</h1>
-                <p class="mb-5">Somos Undefined, un equipo ágil impulsado por el valor.
+                <p class="mb-5">Somos RaymiTech, un equipo ágil impulsado por el valor.
                   <br>
                   Estamos preparados para solventar y ayudarte a solucionar con todas tus necesidades.</p>
               </div>
@@ -639,9 +639,7 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Undefined</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Raymiteche</a>
             </p>
             
             </div>
