@caospierre repair web

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Raymiteche</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Raymiteche</a>
             </p>
             
             </div>
