@caospierre update index

--- a/index.html
+++ b/index.html
@@ -639,13 +639,13 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Raymiteche</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="#" target="_blank" >Raymitech </a> un producto desarrollado por  <a href="https://github.com/Caospierre" target="_blank" >CaosPierre </a> 
             </p>
             
             </div>
           </div>
           
-        </div>
+        </div>g
       </div>
     </footer>
 
