@caospierre update index

--- a/index.html
+++ b/index.html
@@ -226,44 +226,44 @@
 
       <div class="owl-carousel nonloop-block-13">
 
-          <a class="work-thumb" href="images/img_1.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="http://academiamunay.com/" >
             <div class="work-text">
-              <h3>Munay Hunters</h3>
+              <h3>Munay Academia</h3>
               <span class="category">Website</span>
             </div>
             <img src="images/img_1.jpg" alt="Image" class="img-fluid">
           </a> 
           
-          <a class="work-thumb" href="images/img_2.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="https://villaflower.net/contact.html" >
             <div class="work-text">
-              <h3>GEB</h3>
+              <h3>Pizzeria VillaFlower</h3>
               <span class="category">Plataforma</span>
             </div>
             <img src="images/img_2.jpg" alt="Image" class="img-fluid">
           </a>
 
-          <a class="work-thumb" href="images/img_3.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="images/img_4.jpg" data-fancybox="gallery">
             <div class="work-text">
               <h3>Face Detection</h3>
               <span class="category">Aplicacion</span>
             </div>
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+            <img src="images/img_8.jpg" alt="Image" class="img-fluid">
           </a>
 
           <a class="work-thumb" href="images/img_4.jpg" data-fancybox="gallery">
             <div class="work-text">
-              <h3>EduLili</h3>
-              <span class="category">Software Educativo</span>
+              <h3>Mi Cosecha</h3>
+              <span class="category">Aplicacion Flutter</span>
             </div>
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
+            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
           </a>
 
-          <a class="work-thumb" href="images/img_1.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="images/img_4.jpg" data-fancybox="gallery">
             <div class="work-text">
               <h3>Kichwa++</h3>
               <span class="category">Entorno de Programacion</span>
             </div>
-            <img src="images/img_1.jpg" alt="Image" class="img-fluid">
+            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
           </a>
       </div>
     
