@caospierre update index

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <img src="images/img_2.jpg" alt="Image" class="img-fluid">
           </a>
 
-          <a class="work-thumb" href="images/img_4.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="https://github.com/Caospierre/workapp" data-fancybox="gallery">
             <div class="work-text">
               <h3>Face Detection</h3>
               <span class="category">Aplicacion</span>
@@ -250,7 +250,7 @@
             <img src="images/img_8.jpg" alt="Image" class="img-fluid">
           </a>
 
-          <a class="work-thumb" href="images/img_4.jpg" data-fancybox="gallery">
+          <a class="work-thumb" href="https://github.com/Caospierre/huertoApp" >
             <div class="work-text">
               <h3>Mi Cosecha</h3>
               <span class="category">Aplicacion Flutter</span>
